compatibility-tests/compile-fail/tests/ui/duplication-multiple-attributes.stderr
error: Multiple `visibility` attributes are not supported on an enum variant
 --> $DIR/duplication-multiple-attributes.rs:6:30
  |
6 |     #[snafu(visibility(pub), visibility(pub))]
  |                              ^^^^^^^^^^^^^^^
